[package]
name = "thrillseeker_redux"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.4.1"
rayon = "1.5"
clap = "2.33.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"