[package]
name = "thrillseeker_redux"
version = "0.1.0"
edition = "2018"

[lib]
name = "thrillseeker_lib"
path = "src/lib.rs"

[[bin]]
name = "thrillseeker_redux"
path = "src/bin/main.rs"

[[bin]]
name = "run_saved_model"
path = "src/bin/run_saved_model.rs"

[dependencies]
fastrand = "1.4.1"
rayon = "1.5"
clap = "2.33.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"